# lockb-xray

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SCHEMA.md  SECURITY.md  USAGE.md
bun-xray-core/: Cargo.toml
bun-xray-core/src/: lib.rs  model.rs  package_json.rs  parser.rs  security.rs
bun-xray-core/tests/: parser_smoke.rs  property_fuzz.rs
docs/: lockb-xray.1.md
examples/ci-github/: README.md
examples/ci-gitlab/: README.md
examples/minimal/: bun.lockb
examples/override-malicious/: README.md
examples/patched-dep/: README.md
examples/tampered-registry/: bun.lockb
lockb-xray-cli/: Cargo.toml
lockb-xray-cli/src/: main.rs
