[workspace]
members = ["bun-xray-core", "lockb-xray-cli"]
resolver = "2"

[workspace.package]
authors = ["ind4skylivey"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ind4skylivey/lockb-xray"
keywords = ["security", "bun", "lockfile", "forensics"]
categories = ["command-line-utilities", "development-tools", "security"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
comfy-table = "7"
binrw = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
camino = "1"
bitflags = { version = "2", features = ["serde"] }
base64 = "0.21"

[workspace.lints.rust]
unsafe_code = "forbid"
