[package]
name = "lockb-xray"
version = "0.1.0"
edition = "2021"
authors = ["ind4skylivey"]
description = "CLI tool to audit Bun bun.lockb for supply chain risks"
license = "MIT"
repository = "https://github.com/ind4skylivey/lockb-xray"
homepage = "https://github.com/ind4skylivey/lockb-xray"
documentation = "https://github.com/ind4skylivey/lockb-xray"
readme = "../README.md"
keywords = ["security", "bun", "lockfile", "supply-chain"]
categories = ["command-line-utilities", "development-tools", "security"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
comfy-table = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
camino = { workspace = true }
bun-xray-core = { path = "../bun-xray-core", version = "0.1.0" }
binrw = { workspace = true }

[[bin]]
name = "lockb-xray"
path = "src/main.rs"
